--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 notion-client==2.2.1
-openai==1.42.0
+openai>=1.50.0
 nltk==3.8.1
 matplotlib==3.8.2
 pandas==2.1.4
 python-dotenv==1.0.1
 requests==2.32.3
+httpx>=0.25.0
